--- a/work/S07/Webapp/Webapp/Pages/Index.cshtml
+++ b/work/S07/Webapp/Webapp/Pages/Index.cshtml
@@ -22,7 +22,7 @@
                 <th>Owner</th>
             </tr>
 
-            @foreach (var account in Model.Accounts)
+            @foreach (var account in Model.account)
             {
                 <tr>
                     <td>@account.Number</td>
